fix flicker
fix flicker

--- a/yfpp/dev_static/less/_base.less
+++ b/yfpp/dev_static/less/_base.less
@@ -34,6 +34,7 @@ h1{
 	 text-shadow: 1px 1px 1px rgba(255,255,255,.75);
 	 .fadeInDownBig;
 	 .animated;
+	-webkit-backface-visibility: hidden;
 	 
 	
 	.where{
@@ -42,6 +43,8 @@ h1{
 		 font-size: 1.25em;
 		line-height: .8em;
 		.transition(all .5s);
+		-webkit-backface-visibility: hidden;
+	 
 	}
 	.fucking{
 		display: block;
@@ -49,12 +52,16 @@ h1{
 		font-weight:normal;
 		line-height: .8em;
 		.transition(all .85s);
+		-webkit-backface-visibility: hidden;
+	 
 	}
 	.poll{
 		display: block;
 		font-size: .9em;
 		line-height: .9em;
 		.transition(all .5s);
+		-webkit-backface-visibility: hidden;
+	 
 	}
 }
 .restart{
@@ -84,11 +91,15 @@ fieldset{
 	.boxShadowInset(2px, 4px, 5px, 0, rgba(0,0,0,.5));
 	.border-radius(10px);
 	 .animated;
+	 -webkit-backface-visibility: hidden;
+	 
 }
 .address-form{
 	.transition(all .5s);
 	width: 283px;
 	margin: 0 auto;
+	-webkit-backface-visibility: hidden;
+	 
 	
 	
 	label{
